# dryice

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.agents/: bitnuc-empty-input-bug.md  dryice-consolidated-work-plan.md  dryice-design-first-pass.md  dryice-rust-architecture-plan.md  roadmap.md  wrapper-design.md
.agents/finished/: dryice-rust-design-notebook.md
.cargo/: config-portable.toml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: read_throughput.rs  round_trip.rs  write_throughput.rs
benchmarks/src/: lib.rs
dryice/: Cargo.toml
dryice-macros/: Cargo.toml
dryice-node/: Cargo.toml  README.md  api.d.ts  api.js  package.json  tsconfig.json
dryice-node/src/: lib.rs
dryice-node/tests/: round_trip.test.ts
dryice-python/: Cargo.toml  README.md  dryice_python.pyi  pyproject.toml
dryice-python/examples/: biopython_integration.py
dryice-python/src/: lib.rs
dryice-python/tests/: test_round_trip.py
dryice/examples/: README.md  compact_codecs.rs  custom_codec.rs  external_merge_sort.rs  key_only_kmers.rs  kmer_keys.rs  kmer_name_pairs.rs  kmer_partitioning.rs  noodles_adapter.rs  partitioning.rs  record_keys.rs  rust_bio_adapter.rs  spill_reload.rs  temp_file_lifecycle.rs  zero_copy_pipe.rs
dryice/src/: codec.rs  config.rs  error.rs  fields.rs  format.rs  io.rs  key.rs  lib.rs  mmap_io.rs  record.rs  temp.rs
dryice/src/async_io/: format.rs  mod.rs  reader.rs  writer.rs
dryice/src/block/: builder.rs  decoder.rs  header.rs  index.rs  mod.rs  name.rs  quality.rs  sequence.rs
dryice/src/io/: reader.rs  writer.rs
dryice/tests/: async_round_trip.rs  mmap_round_trip.rs  round_trip.rs  temp.rs
libdryice/: Cargo.toml
libdryice/src/: lib.rs  prelude.rs
skills/dryice/: SKILL.md
