[workspace]
members = [
    "dryice",
    "libdryice",
    "dryice-macros"
]
resolver = "2"

[workspace.package]
description = ""
authors = ["Nicholas Minor <nicholasrminor@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
rust-version = "1.85.0"
repository = "https://github.com/nrminor/dryice"
homepage = "https://github.com/nrminor/dryice"
documentation = "https://github.com/nrminor/dryice/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]
exclude = []

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
incremental = true
panic = "abort"
strip = "symbols"


