[workspace]
resolver = "3"
members = ["dryice"]

[workspace.package]
version = "0.1.0"
authors = ["Nicholas Minor <nicholasrminor@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/nrminor/dryice"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = true
codegen-units = 1
strip = true
