[workspace]
resolver = "3"
members = ["dryice", "benchmarks", "dryice-python", "dryice-node"]

[workspace.package]
version = "0.1.1"
authors = ["Nicholas Minor <nicholasrminor@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/nrminor/dryice"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = true
codegen-units = 1
strip = true
