[package]
name = "dryice-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
dryice = { path = "../dryice", package = "dryice-bio" }

[dev-dependencies]
criterion.workspace = true
flate2 = "1.1.9"

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "read_throughput"
harness = false

[[bench]]
name = "round_trip"
harness = false

[lints]
workspace = true
