[package]
name = "dryice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-throughput transient container for read-like genomic records"

[dependencies]
bitnuc = "0.4.1"
thiserror = "2"

[lints]
workspace = true

[dev-dependencies]
bio = "3.0.0"
noodles-fastq = "0.22.0"
proptest = "1.10.0"
